More work on templates

--- a/src/app.html
+++ b/src/app.html
@@ -14,6 +14,8 @@
 		style="overflow: overlay"
 		class="flex direction-col bg-slate-200 h-screen w-full"
 	>
-		%sveltekit.body%
+		<div class="contents">
+			%sveltekit.body%
+		</div>
 	</body>
 </html>
