--- a/src/app.html
+++ b/src/app.html
@@ -14,7 +14,7 @@
 	<body
 		data-sveltekit-preload-data="hover"
 		style="overflow: overlay"
-		class="flex direction-col bg-slate-200 h-screen w-full"
+		class="flex direction-col bg-slate-200 min-h-screen h-full w-full"
 	>
 		<div class="contents">
 			%sveltekit.body%
